# rust_project

./: .gitignore  Cargo.toml  README.md
.github/workflows/: README.md  build.yml  ci.yml  release.yml
src/: app.rs  config.rs  lib.rs  main.rs
src/data/: database.rs  manager.rs  mod.rs  models.rs  validation.rs
src/ui/: components.rs  dialogs.rs  mod.rs  panels.rs  styles.rs
src/utils/: date.rs  export.rs  format.rs  mod.rs
