[package]
name = "household_management"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.32.1"
egui = "0.32.1"
egui_extras = "0.32.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono", "uuid"] }

[features]
default = ["persistence"]
persistence = ["eframe/persistence", "egui/persistence"]
